[gd_scene load_steps=16 format=3 uid="uid://b410rsvjdm1h5"]

[ext_resource type="Script" uid="uid://c6yfui7xy23n0" path="res://GameFiles/player/quake_character.gd" id="1_dwod5"]
[ext_resource type="PackedScene" uid="uid://8q0y0jkmlaua" path="res://AssetImports/skeleton.tscn" id="2_sc11j"]
[ext_resource type="PackedScene" uid="uid://501efyo6yit4" path="res://GameFiles/Guns/shotgun.tscn" id="3_rjcbs"]
[ext_resource type="PackedScene" uid="uid://dv825sqfrbv4x" path="res://GameFiles/health.tscn" id="4_7dryh"]
[ext_resource type="PackedScene" uid="uid://cr6qw3wtq27k1" path="res://GameFiles/Guns/tg_teal.tscn" id="4_v4kes"]
[ext_resource type="PackedScene" uid="uid://cghmqhxgf4o83" path="res://GameFiles/Guns/gattling.tscn" id="5_yirpe"]
[ext_resource type="Script" uid="uid://bxhhcgxgvb1a6" path="res://GameFiles/player/update_hp_ui.gd" id="7_ixqsd"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sblr3"]
albedo_color = Color(0.701335, 0.0701286, 0, 1)

[sub_resource type="TextMesh" id="TextMesh_f3yp2"]
text = "X"
font_size = 24
depth = 0.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gtwum"]
radius = 0.25
height = 1.75554

[sub_resource type="CanvasTexture" id="CanvasTexture_art82"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rx2a4"]
metallic = 1.0
metallic_texture = SubResource("CanvasTexture_art82")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ok225"]
material = SubResource("StandardMaterial3D_rx2a4")

[sub_resource type="SphereShape3D" id="SphereShape3D_bioyd"]

[sub_resource type="LabelSettings" id="LabelSettings_fbqnw"]
font_size = 36
font_color = Color(0.0605303, 0.0605303, 0.0605303, 1)

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_dwod5")

[node name="Body" parent="." instance=ExtResource("2_sc11j")]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1.5, 0, 1.50996e-07, 0, -1, 0, -0.822145, 0)

[node name="Guns" type="Node3D" parent="Body"]
unique_name_in_owner = true
transform = Transform3D(-0.769231, 0, 1.16151e-07, 0, 0.769231, 0, -1.16151e-07, 0, -0.769231, -0.24173, 0.857, 0.0011453)

[node name="Reticle" type="MeshInstance3D" parent="Body/Guns"]
transform = Transform3D(1, 0, -2.71051e-20, 0, 1, 0, 2.71051e-20, 0, 1, 0, -0.0512676, -1.44825)
layers = 512
material_override = SubResource("StandardMaterial3D_sblr3")
mesh = SubResource("TextMesh_f3yp2")

[node name="Weapons" type="Node3D" parent="Body/Guns"]

[node name="Shotgun" parent="Body/Guns/Weapons" instance=ExtResource("3_rjcbs")]
transform = Transform3D(1, 0, -2.71051e-20, 0, 1, 0, 2.71051e-20, 0, 1, 0, 0, 0)
curr_bullets = 3

[node name="Gattling" parent="Body/Guns/Weapons" instance=ExtResource("5_yirpe")]
transform = Transform3D(1, 0, -5.42101e-20, 0, 1, 0, 5.42101e-20, 0, 1, 0, 0, 0)

[node name="TG TEAL" parent="Body/Guns/Weapons" instance=ExtResource("4_v4kes")]
transform = Transform3D(1, 0, -5.42101e-20, 0, 1, 0, 5.42101e-20, 0, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.127921, 0)
shape = SubResource("CapsuleShape3D_gtwum")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.328982, 0)
visible = false
mesh = SubResource("CapsuleMesh_ok225")

[node name="CamPivot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.902585, 0.430511, 0, -0.430511, 0.902585, 0, 0.30051, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CamPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.277371, 0.132299)
shape = SubResource("SphereShape3D_bioyd")
spring_length = 5.0

[node name="Camera" type="Camera3D" parent="CamPivot/SpringArm3D"]
unique_name_in_owner = true
transform = Transform3D(1.25, 0, 0, 0, 1.25, -7.45057e-08, 0, 7.45057e-08, 1.25, 0, 0, 0)

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 0.7

[node name="CoyoteTime" type="Timer" parent="."]
wait_time = 0.2

[node name="JumpGrace" type="Timer" parent="."]
wait_time = 0.15

[node name="Health" parent="." instance=ExtResource("4_7dryh")]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BulletCounter" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -101.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
label_settings = SubResource("LabelSettings_fbqnw")
language = "English"

[node name="HP Count" type="Label" parent="UI"]
layout_mode = 0
offset_right = 119.0
offset_bottom = 62.0
theme_override_font_sizes/font_size = 36
text = "3 / 3"
script = ExtResource("7_ixqsd")

[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="CoyoteTime" to="." method="_on_coyote_time_timeout"]
[connection signal="timeout" from="JumpGrace" to="." method="_on_jump_grace_timeout"]
[connection signal="on_death" from="Health" to="." method="_on_death"]
[connection signal="on_update" from="Health" to="UI/HP Count" method="_on_health_on_update"]
